# pyheatintegration

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  setup.cfg
.github/workflows/: deploy.yml  test.yml
docs/: analysis.rst  base_range.rst  conf.py  create_stream.rst  draw_diagram.rst  draw_graph.rst  enums.rst  errors.rst  excel.rst  getting_started.rst  grand_composite_curve.rst  heat_exchanger.rst  heat_exchanger_cost.rst  heat_range.rst  index.rst  line.rst  pinch_analyzer.rst  plot_segment.rst  segment.rst  stream.rst  streams.rst  temperature_range.rst  tq_diagram.rst
docs/_static/: custom.css
examples/simple/: data.csv  main.py
examples/simple_with_default_stream/: data.csv  main.py
examples/simple_with_external/: data.csv  main.py
src/pyheatintegration/: __init__.py  base_range.py  enums.py  errors.py  grand_composite_curve.py  heat_exchanger.py  heat_range.py  line.py  pinch_analyzer.py  plot_segment.py  segment.py  stream.py  temperature_range.py  tq_diagram.py
src/pyheatintegration/streams/: __init__.py  streams.py  utilities.py
tests/: base_range_test.py  grand_composite_curve_test.py  heat_exchanger_test.py  heat_range_test.py  line_test.py  pinch_analyzer_test.py  plot_segment_test.py  segment_test.py  stream_test.py  temperature_range_test.py  tq_diagram_test.py
