[metadata]
name = pyheatintegration
version = file: VERSION
description = Heat Integration
long_description = file: README.md
long_description_content_type = text/markdown
keywords = chemical-engineering, heat-integration, heat-exchanger
license = MIT
classifiers =
  Development Status :: 4 - Beta
  License :: OSI Approved :: MIT License
  Natural Language :: Japanese
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering :: Chemistry
author = Taiga Katarao
author_email = taiga4562@gmail.com
url = https://github.com/tarao1006/pyheatintegration

[options]
package_dir =
  = src
packages = find:
python_requires = >= 3.9

[options.packages.find]
where = src
